examples/test/testpolicy4418.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4418
  namespace: namespace4
spec:
  podSelector:
    matchLabels:
      key28: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value44
      podSelector:
        matchLabels:
          key4: value30
          key26: value15
          key19: value6
